roles/k3s/traefik/files/example/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: whoami.ch13f.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
